--- a/pages/ngan-hang-de.html
+++ b/pages/ngan-hang-de.html
@@ -191,13 +191,13 @@ function closePreview(){document.getElementById('prev-ov').classList.remove('sho
 
 <style>
 .lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 24px 24px;margin-top:40px;font-family:'Sora',sans-serif}
-.lt360-footer-inner{max-width:1100px;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:32px}
+.lt360-footer-inner{max-width:900px;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:32px;text-align:center;justify-items:center}
 .lt360-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
 .lt360-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
-.lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}
+.lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt360-footer-map{width:100%}
 .lt360-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px}
 .lt360-footer-social span{background:#1a2236;color:#a0aec0;font-size:12px;padding:5px 12px;border-radius:20px;border:1px solid #252d3d}.lt360-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt360-fb-btn:hover{background:#1877f2}
-.lt360-footer-bottom{max-width:1100px;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
+.lt360-footer-bottom{max-width:900px;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
 .lt360-footer-bottom span{font-size:12px;color:#4a5568}
 .lt360-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
 @media(max-width:700px){.lt360-footer-inner{grid-template-columns:1fr}.lt360-footer-bottom{flex-direction:column;text-align:center}}
@@ -207,11 +207,11 @@ function closePreview(){document.getElementById('prev-ov').classList.remove('sho
     <div>
       <h4>Địa chỉ</h4>
       <p>Lớp 12A4<br>Trường THPT Đan Phượng<br>Thị trấn Phùng, huyện Đan Phượng, Hà Nội</p>
-      <p style="margin-top:10px">© 2026 LuyenThi360</p>
+      <p style="margin-top:10px">© 2026 ReRach Esport</p>
     </div>
     <div class="lt360-footer-map">
       <h4>Bản đồ</h4>
-      <iframe src="https://maps.google.com/maps?q=Tr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.8!2d105.65899!3d21.08234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b58ec0714f%3A0xa26e4532e0b7e0ef!2sTr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng!5e0!3m2!1svi!2svn!4v1748000000000!5m2!1svi!2svn" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div>
       <h4>Mạng xã hội</h4>
