--- a/pages/hsa.html
+++ b/pages/hsa.html
@@ -226,14 +226,14 @@ function submitExam(){clearInterval(examTimer);const cnt=Object.keys(examAnswers
 </script>
 
 <style>
-.lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 24px 24px;margin-top:40px;font-family:'Sora',sans-serif}
-.lt360-footer-inner{max-width:900px;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:32px;text-align:center;justify-items:center}
+.lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 48px 24px;margin-top:40px;font-family:'Sora',sans-serif;width:100%}
+.lt360-footer-inner{max-width:100%;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:0;text-align:center;justify-items:center}
 .lt360-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
 .lt360-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
 .lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt360-footer-map{width:100%}
 .lt360-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px}
 .lt360-footer-social span{background:#1a2236;color:#a0aec0;font-size:12px;padding:5px 12px;border-radius:20px;border:1px solid #252d3d}.lt360-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt360-fb-btn:hover{background:#1877f2}
-.lt360-footer-bottom{max-width:900px;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
+.lt360-footer-bottom{max-width:100%;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
 .lt360-footer-bottom span{font-size:12px;color:#4a5568}
 .lt360-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
 @media(max-width:700px){.lt360-footer-inner{grid-template-columns:1fr}.lt360-footer-bottom{flex-direction:column;text-align:center}}
