--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -262,7 +262,7 @@ updateCD();setInterval(updateCD,1000);
     </div>
     <div class="lt360-footer-map">
       <h4>Bản đồ</h4>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.8!2d105.65899!3d21.08234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b58ec0714f%3A0xa26e4532e0b7e0ef!2sTr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng!5e0!3m2!1svi!2svn!4v1748000000000!5m2!1svi!2svn" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://maps.google.com/maps?q=Tr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div>
       <h4>Mạng xã hội</h4>
