--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -208,6 +208,45 @@ body{background:var(--bg);color:var(--text);font-family:'Sora',sans-serif;transi
       </div>
     </div>
   </div>
+<style>
+.lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 48px 24px;margin-top:40px;font-family:'Sora',sans-serif;width:100%}
+.lt360-footer-inner{max-width:100%;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:0;text-align:center;justify-items:center}
+.lt360-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
+.lt360-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
+.lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt360-footer-map{width:100%}
+.lt360-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px;justify-content:center}
+.lt360-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt360-fb-btn:hover{background:#1877f2}
+.lt360-footer-bottom{max-width:100%;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
+.lt360-footer-bottom span{font-size:12px;color:#4a5568}
+.lt360-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
+@media(max-width:700px){.lt360-footer-inner{grid-template-columns:1fr}.lt360-footer-bottom{flex-direction:column;text-align:center}}
+</style>
+<footer class="lt360-footer">
+  <div class="lt360-footer-inner">
+    <div>
+      <h4>Địa chỉ</h4>
+      <p>Lớp 12A4<br>Trường THPT Đan Phượng<br>Thị trấn Phùng, huyện Đan Phượng, Hà Nội</p>
+      <p style="margin-top:10px">© 2026 LuyenThi360/p>
+    </div>
+    <div class="lt360-footer-map">
+      <h4>Bản đồ</h4>
+      <iframe src="https://maps.google.com/maps?q=Tr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div>
+      <h4>Mạng xã hội</h4>
+      <div class="lt360-footer-social">
+        <a href="https://facebook.com" target="_blank" class="lt360-fb-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#1877f2"><path d="M24 12.073C24 5.405 18.627 0 12 0S0 5.405 0 12.073C0 18.1 4.388 23.094 10.125 24v-8.437H7.078v-3.49h3.047V9.413c0-3.025 1.792-4.697 4.533-4.697 1.312 0 2.686.235 2.686.235v2.953h-1.513c-1.491 0-1.956.93-1.956 1.886v2.284h3.328l-.532 3.49h-2.796V24C19.612 23.094 24 18.1 24 12.073z"/></svg>
+          Facebook
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="lt360-footer-bottom">
+    <span>LuyenThi360 – Nền tảng ôn thi THPT Quốc gia</span>
+    <div class="lt360-footer-exam">🗓️ Ngày thi: 11/06/2026</div>
+  </div>
+</footer>
 </div>
 </div>
 <script>
@@ -240,44 +279,6 @@ function updateCD(){
 updateCD();setInterval(updateCD,1000);
 </script>
 
-<style>
-.lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 48px 24px;margin-top:40px;font-family:'Sora',sans-serif;width:100%}
-.lt360-footer-inner{max-width:100%;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:0;text-align:center;justify-items:center}
-.lt360-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
-.lt360-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
-.lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt360-footer-map{width:100%}
-.lt360-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px}
-.lt360-footer-social span{background:#1a2236;color:#a0aec0;font-size:12px;padding:5px 12px;border-radius:20px;border:1px solid #252d3d}.lt360-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt360-fb-btn:hover{background:#1877f2}
-.lt360-footer-bottom{max-width:100%;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
-.lt360-footer-bottom span{font-size:12px;color:#4a5568}
-.lt360-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
-@media(max-width:700px){.lt360-footer-inner{grid-template-columns:1fr}.lt360-footer-bottom{flex-direction:column;text-align:center}}
-</style>
-<footer class="lt360-footer">
-  <div class="lt360-footer-inner">
-    <div>
-      <h4>Địa chỉ</h4>
-      <p>Lớp 12A4<br>Trường THPT Đan Phượng<br>Thị trấn Phùng, huyện Đan Phượng, Hà Nội</p>
-      <p style="margin-top:10px">© 2026 ReRach Esport</p>
-    </div>
-    <div class="lt360-footer-map">
-      <h4>Bản đồ</h4>
-      <iframe src="https://maps.google.com/maps?q=Tr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <div>
-      <h4>Mạng xã hội</h4>
-      <div class="lt360-footer-social">
-        <a href="https://facebook.com" target="_blank" class="lt360-fb-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#1877f2"><path d="M24 12.073C24 5.405 18.627 0 12 0S0 5.405 0 12.073C0 18.1 4.388 23.094 10.125 24v-8.437H7.078v-3.49h3.047V9.413c0-3.025 1.792-4.697 4.533-4.697 1.312 0 2.686.235 2.686.235v2.953h-1.513c-1.491 0-1.956.93-1.956 1.886v2.284h3.328l-.532 3.49h-2.796V24C19.612 23.094 24 18.1 24 12.073z"/></svg>
-          Facebook
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="lt360-footer-bottom">
-    <span>LuyenThi360 – Nền tảng ôn thi THPT Quốc gia</span>
-    <div class="lt360-footer-exam">🗓️ Ngày thi: 11/06/2026</div>
-  </div>
-</footer>
+
 </body>
 </html>
