--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,8 +1,11 @@
+d · HTML
+Copy
+
 <!DOCTYPE html>
 <html lang="vi" data-theme="dark">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Dashboard – LuyenThi360</title>
+<title>Dashboard – LuyenThi369</title>
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -113,7 +116,7 @@ body{background:var(--bg);color:var(--text);font-family:'Sora',sans-serif;transi
 <aside class="sidebar">
   <a class="logo" href="dashboard.html">
     <div class="logo-icon">📚</div>
-    <div class="logo-text">Luyen<em>Thi</em>360</div>
+    <div class="logo-text">Luyen<em>Thi</em>369</div>
   </a>
   <nav class="nav">
     <div class="nav-sec"><div class="nav-lbl">Tổng quan</div>
@@ -209,53 +212,53 @@ body{background:var(--bg);color:var(--text);font-family:'Sora',sans-serif;transi
     </div>
   </div>
 <style>
-.lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 48px 24px;margin-top:40px;font-family:'Sora',sans-serif;width:100%}
-.lt360-footer-inner{max-width:100%;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:0;text-align:center;justify-items:center}
-.lt360-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
-.lt360-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
-.lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt360-footer-map{width:100%}
-.lt360-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px;justify-content:center}
-.lt360-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt360-fb-btn:hover{background:#1877f2}
-.lt360-footer-bottom{max-width:100%;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
-.lt360-footer-bottom span{font-size:12px;color:#4a5568}
-.lt360-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
-@media(max-width:700px){.lt360-footer-inner{grid-template-columns:1fr}.lt360-footer-bottom{flex-direction:column;text-align:center}}
+.lt369-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 48px 24px;margin-top:40px;font-family:'Sora',sans-serif;width:100%}
+.lt369-footer-inner{max-width:100%;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:0;text-align:center;justify-items:center}
+.lt369-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
+.lt369-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
+.lt369-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt369-footer-map{width:100%}
+.lt369-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px;justify-content:center}
+.lt369-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt369-fb-btn:hover{background:#1877f2}
+.lt369-footer-bottom{max-width:100%;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
+.lt369-footer-bottom span{font-size:12px;color:#4a5568}
+.lt369-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
+@media(max-width:700px){.lt369-footer-inner{grid-template-columns:1fr}.lt369-footer-bottom{flex-direction:column;text-align:center}}
 </style>
-<footer class="lt360-footer">
-  <div class="lt360-footer-inner">
+<footer class="lt369-footer">
+  <div class="lt369-footer-inner">
     <div>
       <h4>Địa chỉ</h4>
       <p>Lớp 12A4<br>Trường THPT Đan Phượng<br>Thị trấn Phùng, huyện Đan Phượng, Hà Nội</p>
-      <p style="margin-top:10px">© 2026 LuyenThi360/p>
+      <p style="margin-top:10px">© 2026 LuyenThi369</p>
     </div>
-    <div class="lt360-footer-map">
+    <div class="lt369-footer-map">
       <h4>Bản đồ</h4>
       <iframe src="https://maps.google.com/maps?q=Tr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div>
       <h4>Mạng xã hội</h4>
-      <div class="lt360-footer-social">
-        <a href="https://facebook.com" target="_blank" class="lt360-fb-btn">
+      <div class="lt369-footer-social">
+        <a href="https://facebook.com" target="_blank" class="lt369-fb-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#1877f2"><path d="M24 12.073C24 5.405 18.627 0 12 0S0 5.405 0 12.073C0 18.1 4.388 23.094 10.125 24v-8.437H7.078v-3.49h3.047V9.413c0-3.025 1.792-4.697 4.533-4.697 1.312 0 2.686.235 2.686.235v2.953h-1.513c-1.491 0-1.956.93-1.956 1.886v2.284h3.328l-.532 3.49h-2.796V24C19.612 23.094 24 18.1 24 12.073z"/></svg>
           Facebook
         </a>
       </div>
     </div>
   </div>
-  <div class="lt360-footer-bottom">
-    <span>LuyenThi360 – Nền tảng ôn thi THPT Quốc gia</span>
-    <div class="lt360-footer-exam">🗓️ Ngày thi: 11/06/2026</div>
+  <div class="lt369-footer-bottom">
+    <span>LuyenThi369 – Nền tảng ôn thi THPT Quốc gia</span>
+    <div class="lt369-footer-exam">🗓️ Ngày thi: 11/06/2026</div>
   </div>
 </footer>
 </div>
 </div>
 <script>
-function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt360_theme',t);const b=document.getElementById('theme-btn');if(b)b.textContent=t==='dark'?'☀️':'🌙'}
+function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt369_theme',t);const b=document.getElementById('theme-btn');if(b)b.textContent=t==='dark'?'☀️':'🌙'}
 function toggleTheme(){applyTheme(document.documentElement.getAttribute('data-theme')==='dark'?'light':'dark')}
-(function(){applyTheme(localStorage.getItem('lt360_theme')||'dark')})();
+(function(){applyTheme(localStorage.getItem('lt369_theme')||'dark')})();
 // User name
 (function(){
-  const n=localStorage.getItem('lt360_user')||'bạn';
+  const n=localStorage.getItem('lt369_user')||'bạn';
   document.getElementById('wname').textContent=n;
   const sbn=document.getElementById('sb-name');if(sbn)sbn.textContent=n;
   const sbav=document.getElementById('sb-av');if(sbav)sbav.textContent=n.charAt(0).toUpperCase();
