--- a/pages/ngan-hang-de.html
+++ b/pages/ngan-hang-de.html
@@ -1,8 +1,12 @@
+
+Ngan hang de · HTML
+Copy
+
 <!DOCTYPE html>
 <html lang="vi" data-theme="dark">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Ngân hàng đề – LuyenThi360</title>
+<title>Ngân hàng đề – LuyenThi369</title>
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -94,7 +98,7 @@ body{background:var(--bg);color:var(--text);font-family:'Sora',sans-serif;transi
 <body>
 <div class="app">
 <aside class="sidebar">
-  <a class="logo" href="dashboard.html"><div class="logo-icon">📚</div><div class="logo-text">Luyen<em>Thi</em>360</div></a>
+  <a class="logo" href="dashboard.html"><div class="logo-icon">📚</div><div class="logo-text">Luyen<em>Thi</em>369</div></a>
   <nav class="nav">
     <div class="nav-sec"><div class="nav-lbl">Tổng quan</div>
       <a class="nav-a" id="na-home" href="dashboard.html"><span class="ic">🏠</span>Dashboard</a>
@@ -145,11 +149,11 @@ body{background:var(--bg);color:var(--text);font-family:'Sora',sans-serif;transi
   </div>
 </div>
 <script>
-function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt360_theme',t);const b=document.getElementById('theme-btn');if(b)b.textContent=t==='dark'?'☀️':'🌙'}
+function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt369_theme',t);const b=document.getElementById('theme-btn');if(b)b.textContent=t==='dark'?'☀️':'🌙'}
 function toggleTheme(){applyTheme(document.documentElement.getAttribute('data-theme')==='dark'?'light':'dark')}
 (function(){
-  applyTheme(localStorage.getItem('lt360_theme')||'dark');
-  const n=localStorage.getItem('lt360_user')||'bạn';
+  applyTheme(localStorage.getItem('lt369_theme')||'dark');
+  const n=localStorage.getItem('lt369_user')||'bạn';
   document.getElementById('sb-name').textContent=n;
   document.getElementById('sb-av').textContent=n.charAt(0).toUpperCase();
   document.getElementById('na-bank').classList.add('active');
@@ -189,43 +193,5 @@ function openPreview(id){
 function closePreview(){document.getElementById('prev-ov').classList.remove('show');document.body.style.overflow=''}
 </script>
 
-<style>
-.lt360-footer{background:#0d1117;border-top:1px solid #1e2736;padding:40px 48px 24px;margin-top:40px;font-family:'Sora',sans-serif;width:100%}
-.lt360-footer-inner{max-width:100%;margin:0 auto;display:grid;grid-template-columns:1fr 1fr 1fr;gap:0;text-align:center;justify-items:center}
-.lt360-footer h4{font-size:13px;font-weight:700;color:#e8edf5;margin-bottom:12px;text-transform:uppercase;letter-spacing:.5px}
-.lt360-footer p{font-size:13px;color:#6b7a99;line-height:1.7;margin:0}
-.lt360-footer-map iframe{border-radius:10px;border:1px solid #1e2736;width:100%;height:150px}.lt360-footer-map{width:100%}
-.lt360-footer-social{display:flex;flex-wrap:wrap;gap:8px;margin-top:4px}
-.lt360-footer-social span{background:#1a2236;color:#a0aec0;font-size:12px;padding:5px 12px;border-radius:20px;border:1px solid #252d3d}.lt360-fb-btn{display:inline-flex;align-items:center;gap:8px;background:#1a2236;color:#e8edf5;font-size:13px;font-weight:600;padding:8px 16px;border-radius:20px;border:1px solid #1877f2;text-decoration:none;transition:background .2s}.lt360-fb-btn:hover{background:#1877f2}
-.lt360-footer-bottom{max-width:100%;margin:24px auto 0;padding-top:16px;border-top:1px solid #1a2236;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:8px}
-.lt360-footer-bottom span{font-size:12px;color:#4a5568}
-.lt360-footer-exam{background:linear-gradient(90deg,rgba(0,229,255,.1),rgba(124,58,237,.1));border:1px solid rgba(0,229,255,.2);border-radius:8px;padding:8px 14px;font-size:12px;color:#00e5ff;font-weight:600}
-@media(max-width:700px){.lt360-footer-inner{grid-template-columns:1fr}.lt360-footer-bottom{flex-direction:column;text-align:center}}
-</style>
-<footer class="lt360-footer">
-  <div class="lt360-footer-inner">
-    <div>
-      <h4>Địa chỉ</h4>
-      <p>Lớp 12A4<br>Trường THPT Đan Phượng<br>Thị trấn Phùng, huyện Đan Phượng, Hà Nội</p>
-      <p style="margin-top:10px">© 2026 ReRach Esport</p>
-    </div>
-    <div class="lt360-footer-map">
-      <h4>Bản đồ</h4>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.8!2d105.65899!3d21.08234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b58ec0714f%3A0xa26e4532e0b7e0ef!2sTr%C6%B0%E1%BB%9Dng%20THPT%20%C4%90an%20Ph%C6%B0%E1%BB%A3ng!5e0!3m2!1svi!2svn!4v1748000000000!5m2!1svi!2svn" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <div>
-      <h4>Mạng xã hội</h4>
-      <div class="lt360-footer-social">
-        <a href="https://facebook.com" target="_blank" class="lt360-fb-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#1877f2"><path d="M24 12.073C24 5.405 18.627 0 12 0S0 5.405 0 12.073C0 18.1 4.388 23.094 10.125 24v-8.437H7.078v-3.49h3.047V9.413c0-3.025 1.792-4.697 4.533-4.697 1.312 0 2.686.235 2.686.235v2.953h-1.513c-1.491 0-1.956.93-1.956 1.886v2.284h3.328l-.532 3.49h-2.796V24C19.612 23.094 24 18.1 24 12.073z"/></svg>
-          Facebook
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="lt360-footer-bottom">
-    <span>LuyenThi360 – Nền tảng ôn thi THPT Quốc gia</span>
-    <div class="lt360-footer-exam">🗓️ Ngày thi: 11/06/2026</div>
-  </div>
-</footer>
+
 </body></html>
