--- a/pages/dang-nhap.html
+++ b/pages/dang-nhap.html
@@ -1,8 +1,12 @@
+
+Dang nhap · HTML
+Copy
+
 <!DOCTYPE html>
 <html lang="vi" data-theme="dark">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Đăng nhập – LuyenThi360</title>
+<title>Đăng nhập – LuyenThi369</title>
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -77,7 +81,7 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
 <div class="left">
   <a class="brand" href="#">
     <div class="brand-icon">📚</div>
-    <div class="brand-name">Luyen<em>Thi</em>360</div>
+    <div class="brand-name">Luyen<em>Thi</em>369</div>
   </a>
   <div class="hero">
     <h1>Chinh phục<br><span class="hl">điểm 10 kỳ thi</span><br>THPT &amp; HSA</h1>
@@ -167,9 +171,9 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
   </div>
 </div>
 <script>
-function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt360_theme',t);document.getElementById('tt').textContent=t==='dark'?'☀️':'🌙'}
+function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt369_theme',t);document.getElementById('tt').textContent=t==='dark'?'☀️':'🌙'}
 function toggleTheme(){applyTheme(document.documentElement.getAttribute('data-theme')==='dark'?'light':'dark')}
-applyTheme(localStorage.getItem('lt360_theme')||'dark');
+applyTheme(localStorage.getItem('lt369_theme')||'dark');
 // Canvas
 const cv=document.getElementById('cv'),ct=cv.getContext('2d');let W,H,ds=[];
 function rsz(){W=cv.width=innerWidth;H=cv.height=innerHeight}rsz();addEventListener('resize',rsz);
@@ -181,7 +185,7 @@ fr();
 function showF(id,el){['login','register','forgot'].forEach(f=>{document.getElementById('f-'+f).style.display='none'});document.getElementById('f-'+id).style.display='block';document.querySelectorAll('.atab').forEach(t=>t.classList.remove('active'));if(el)el.classList.add('active');else if(id==='login')document.querySelectorAll('.atab')[0].classList.add('active');else if(id==='register')document.querySelectorAll('.atab')[1].classList.add('active')}
 function tp(id,icon){const i=document.getElementById(id);i.type=i.type==='password'?'text':'password';icon.textContent=i.type==='password'?'👁️':'🙈'}
 function chkStr(v){const sg=['s1','s2','s3','s4'].map(id=>document.getElementById(id));const lb=document.getElementById('slbl');sg.forEach(s=>s.className='seg');if(!v){lb.textContent='Nhập mật khẩu';return}let sc=0;if(v.length>=8)sc++;if(/[A-Z]/.test(v))sc++;if(/[0-9]/.test(v))sc++;if(/[^A-Za-z0-9]/.test(v))sc++;const cl=['w','w','m','s'],lb2=['Quá yếu','Yếu','Trung bình','Mạnh','Rất mạnh'];for(let i=0;i<sc;i++)sg[i].classList.add(cl[Math.min(sc-1,3)]);lb.textContent=lb2[sc]}
-function saveName(n){localStorage.setItem('lt360_user',n.charAt(0).toUpperCase()+n.slice(1))}
+function saveName(n){localStorage.setItem('lt369_user',n.charAt(0).toUpperCase()+n.slice(1))}
 function doLogin(){const n=document.getElementById('ln').value.trim(),p=document.getElementById('lp').value,err=document.getElementById('lerr'),btn=document.getElementById('btn-l');if(!n||!p){err.style.display='flex';return}err.style.display='none';btn.textContent='⏳ Đang đăng nhập...';btn.disabled=true;const dn=n.includes('@')?n.split('@')[0]:n;saveName(dn);setTimeout(()=>{btn.textContent='✅ Thành công!';btn.style.background='linear-gradient(135deg,#10b981,#059669)';setTimeout(()=>{location.href="dashboard.html"},700)},1100)}
 function doReg(){const n=document.getElementById('rn').value.trim(),e=document.getElementById('re').value.trim(),p=document.getElementById('rp').value,btn=document.getElementById('btn-r');if(!n||!e||!p){alert('Nhập đủ thông tin!');return}saveName(n);btn.textContent='⏳ Đang tạo...';btn.disabled=true;setTimeout(()=>{btn.textContent='✅ Thành công!';btn.style.background='linear-gradient(135deg,#10b981,#059669)';setTimeout(()=>{location.href="dashboard.html"},700)},1100)}
 function qLogin(pv){const n=prompt('Đăng nhập bằng '+pv+'\nNhập tên của bạn:');if(!n)return;saveName(n);location.href="dashboard.html"}
@@ -189,5 +193,7 @@ function showOtp(){if(!document.getElementById('fpe').value.trim()){alert('Nhậ
 function on(el,idx){const cs=document.querySelectorAll('.otp-cell');if(el.value&&idx<5)cs[idx+1].focus()}
 document.addEventListener('keydown',e=>{if(e.key==='Enter'&&document.getElementById('f-login').style.display!=='none')doLogin();if(e.key==='Backspace'&&e.target.classList.contains('otp-cell')){const cs=[...document.querySelectorAll('.otp-cell')],i=cs.indexOf(e.target);if(!e.target.value&&i>0)cs[i-1].focus()}});
 </script>
+
+
 </body>
 </html>
