Replace font with 'Be Vietnam Pro' in dashboard

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Dashboard – LuyenThi369</title>
-<link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700;800;900&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <style>
 
 *{margin:0;padding:0;box-sizing:border-box}
@@ -20,7 +20,7 @@
   --text:#111827;--muted:#6b7a99;--card:#ffffff;
   --shadow:0 2px 16px rgba(100,120,200,.12);
 }
-body{background:var(--bg);color:var(--text);font-family:'Sora',sans-serif;transition:background .3s,color .3s;line-height:1.5}
+body{background:var(--bg);color:var(--text);font-family:'Be Vietnam Pro',sans-serif;transition:background .3s,color .3s;line-height:1.5}
 ::-webkit-scrollbar{width:4px}::-webkit-scrollbar-track{background:var(--bg)}::-webkit-scrollbar-thumb{background:var(--border);border-radius:2px}
 /* layout */
 .app{display:flex;min-height:100vh}
